2005-12-28  Jeroen T. Vermeulen <jtv@xs4all.nl>
 *:
  - Migrated from CVS to Subversion
 src/util.cxx:
  - Fixed typo: called strnlen() instead of pqxx_strnlen()
2005-12-16  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/util.hxx, src/util.cxx, test/test000.cxx:
  - Nul characters are not allowed inside PostgreSQL strings
2005-12-15  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configitems, configure.ac.in:
  - Check for strnlen()
 src/util.cxx:
  - Fixed serious sqlesc() encoding bug, thanks tometzky@batory.org.pl!
 test/test000.cxx:
  - Fixed nul character escape tests
2005-12-08  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configure.ac.in:
  - New --with-std= option
 include/Makefile.am, include/pqxx/Makefile.am:
  - Fixed incorrect header installation directory, thanks cbou@mail.ru
2005-11-28  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configure.ac.in:
  - Added some gcc 4.x options to maintainer mode
 src/binarystring.cxx:
  - Fixed Effective C++ warning
 src/pipeline.cxx, src/robusttransaction.cxx:
  - Removed unused-variable warnings in catch clauses
2005-11-19  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/*.hxx, src/*.cxx:
  - Made namedclass a virtual base of transactionfocus & transaction_base
  - Child classes no longer pass their names to base classes
  - Switched arguments to namedclass constructor around
  - Made object name optional
 include/pqxx/connection_base.hxx, src/connection_base.cxx:
  - Fixed bug: SetupState() was not always called!
  - More connection capabilities detected
  - Option not to register with transaction (used for subtransaction)
  - New class for connection reactivation avoidance "exemptions"
  - Function to adorn names with unique numbers
 include/pqxx/cursor.hxx, include/pqxx/transaction_base.hxx, src/cursor.cxx,
 src/oldcursor.cxx:
  - Spliced out unique cursor numbering, moved to connection_base
 include/pqxx/dbtransaction.hxx, src/dbtransaction.cxx:
  - Sensible defaults for overridable virtual functions
 include/pqxx/pqxx: