@@ -1,8 +1,12 @@
 2005-12-28  Jeroen T. Vermeulen <jtv@xs4all.nl>
  *:
   - Migrated from CVS to Subversion
+ config/Makefile.am, debian/rules, doc/Makefile.am:
+  - Remove .svn directories (as well as CVS ones) from distribution tarball
  src/util.cxx:
   - Fixed typo: called strnlen() instead of pqxx_strnlen()
+ tools/preprelease:
+  - Use rm's -f option when removing .svn directories
 2005-12-16  Jeroen T. Vermeulen <jtv@xs4all.nl>
  include/pqxx/util.hxx, src/util.cxx, test/test000.cxx:
   - Nul characters are not allowed inside PostgreSQL strings
